labs/database-migration-basic/cfn-templates/on-prem.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: "[Database Migration Basic] On-premises system"

Parameters:
  AMI:
    Type: "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>"
    Default: "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"

Resources:
  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: "10.0.0.0/16"
      EnableDnsHostnames: true
      Tags:
        - Key: "Name"
          Value: "[Database Migration Basic] On-premises VPC"

  Subnet:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref VPC
      CidrBlock: "10.0.0.0/24"
      AvailabilityZone: !Select
        - "0"
        - !GetAZs ""
      Tags:
        - Key: "Name"
          Value: "[Database Migration Basic] On-premises Subnet"

  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - Key: "Name"
          Value: "[Database Migration Basic] On-premises Internet Gateway"

  AttachGateway:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway


  RouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: "Name"
          Value: "[Database Migration Basic] On-premises Route Table"

  Route:
    Type: "AWS::EC2::Route"
    DependsOn: "AttachGateway"
    Properties:
      RouteTableId: !Ref RouteTable
      GatewayId: !Ref InternetGateway
      DestinationCidrBlock: "0.0.0.0/0"

  SubnetRouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref Subnet
      RouteTableId: !Ref RouteTable

  SecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      VpcId: !Ref VPC
      GroupDescription: "Allow SSH and PostgreSQL access"

      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: "22"
          ToPort: "22"
          CidrIp: "0.0.0.0/0"

        - IpProtocol: "tcp"
          FromPort: "5432"
          ToPort: "5432"
          CidrIp: "0.0.0.0/0"

  VM:
    Type: "AWS::EC2::Instance"
    Metadata:
      AWS::CloudFormation::Init:
        config:
          packages:
            yum:
              docker: []
              git: []
          commands:
            init:
              command: |
                #!/bin/bash
                systemctl enable docker
                systemctl start docker

                git clone https://github.com/phamtrongngh/aws-challenges.git /home/ec2-user/aws-challenges

                cd /home/ec2-user/aws-challenges/labs/database-migration-basic
                docker run --name postgres \
                  -dp 5432:5432 \
                  -e POSTGRES_PASSWORD=postgres -e POSTGRES_DB=employees \
                  -v $(pwd)/db.sql:/docker-entrypoint-initdb.d/db.sql \
                  postgres:16

          services:
            sysvinit:
              docker:
                enabled: true
                ensureRunning: true

    Properties:
      InstanceType: "t2.micro"
      ImageId: !Ref AMI
      KeyName: "cloudformation"
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum update -y aws-cfn-bootstrap
          /opt/aws/bin/cfn-init -s ${AWS::StackId} --resource VM --region ${AWS::Region}
          /opt/aws/bin/cfn-hup
          /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackId} --resource VM --region ${AWS::Region}

      NetworkInterfaces:
        - DeviceIndex: "0"
          AssociatePublicIpAddress: "true"
          DeleteOnTermination: "true"
          SubnetId: !Ref Subnet
          GroupSet:
            - !Ref SecurityGroup
      
      Tags:
        - Key: "Name"
          Value: "[Database Migration Basic] On-premises VM"

Outputs:
  InstanceId:
    Value: !Ref VM
    Description: "Instance ID"

  PublicIp:
    Value: !GetAtt VM.PublicIp
    Description: "Public IP"
    Export:
      Name: "OnPremPublicIp"

  PublicDnsName:
    Value: !GetAtt VM.PublicDnsName
    Description: "Public DNS"

  VPCId:
    Value: !Ref VPC
    Description: "VPC ID"

  SubnetId:
    Value: !Ref Subnet
    Description: "Subnet ID"
